changed package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pos",
+  "name": "pos2",
   "description": "fasttag part of speech tagger implementation",
   "keywords": [
     "nlp",
